# HCSE236_PickAndPlaceRobot

./: .gitmodules
src/pick_and_place_core/: CMakeLists.txt  package.xml
src/pick_and_place_core/config/: moveit_controllers.yaml
src/pick_and_place_core/launch/: moveit_simulation.launch.py  pick_and_place.launch.py
src/pick_and_place_core/src/: pick_and_place_node.cpp
src/pick_and_place_core/test/: test_node.cpp
